Compiler/tests/good/Vectors/04_vector.rs
fn main() {
    let 

    let p:Vec<Point> = vec![p1, p2];
    
    print!(p[1].x);
    return;
}