Compiler/tests/bad/Vectors/04_vector.rs
fn main(){
    let x : Vec<bool> = vec![5, true, true];
}